syntax = "proto3";

package auth;

import "base/base.proto";

option go_package = "github.com/dizzrt/dauth/api/gen/auth;auth";

message GenerateAuthorizationCodeRequest {
  uint32 user_id = 1;
  uint32 client_id = 2;
  string redirect_uri = 3;
  string scope = 4;

  base.Base base = 255;
}

message GenerateAuthorizationCodeResponse {
  string code = 1;

  base.BaseResp base_resp = 255;
}

message ExchangeTokenRequest {
  string code = 1;
  uint32 client_id = 2;
  string client_secret = 3;
  string redirect_uri = 4;

  base.Base base = 255;
}

message ExchangeTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 access_expire_at = 3;
  int64 refresh_expire_at = 4;

  base.BaseResp base_resp = 255;
}

service AuthService {
  // GenerateAuthorizationCode generates an authorization code.
  rpc GenerateAuthorizationCode(GenerateAuthorizationCodeRequest) returns (GenerateAuthorizationCodeResponse) {}

  // ExchangeToken exchanges an authorization code for an access token.
  rpc ExchangeToken(ExchangeTokenRequest) returns (ExchangeTokenResponse) {}
}
