syntax = "proto3";

package token;
option go_package = "github.com/dizzrt/dauth/api/gen/token;token";

import "base/base.proto";
import "token/token_common.proto";
import "google/api/annotations.proto";

message IssueRequest {
    uint32 uid = 1;
    string client_id = 2;
    // scope = 3 (reserved for future use)
    int64 expiration = 4;

    base.Base base = 255;
}

message IssueResponse {
    string token = 1;

    base.BaseResp base_resp = 255;
}

message ValidateRequest {
    string token = 1;
    string client_id = 2;

    base.Base base = 255;
}

message ValidateResponse {
    bool is_valid = 1;
    string reason = 2;

    base.BaseResp base_resp = 255;
}

message RevokeRequest {
    string token = 1;
    string reason = 2;

    base.Base base = 255;
}

message RevokeResponse {
    bool is_success = 1;

    base.BaseResp base_resp = 255;
}

service TokenService {
    // Issue issues a token for the given uid and client_id.
    rpc Issue(IssueRequest) returns (IssueResponse) {}

    // Validate validates a token.
    rpc Validate(ValidateRequest) returns (ValidateResponse) {}

    // Revoke revokes a token.
    rpc Revoke(RevokeRequest) returns (RevokeResponse) {}
}